--- a/11_07_14/WebContent/WEB-INF/web.xml
+++ b/11_07_14/WebContent/WEB-INF/web.xml
@@ -11,13 +11,11 @@
  
     <servlet>
         <servlet-name>spring</servlet-name>
-        <servlet-class>
-            org.springframework.web.servlet.DispatcherServlet
-        </servlet-class>
+        <servlet-class> org.springframework.web.servlet.DispatcherServlet </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>spring</servlet-name>
-        <url-pattern>*.html</url-pattern>
+        <url-pattern>*.htm</url-pattern>
     </servlet-mapping>
 </web-app>
